# HiC2MicroC-MAR

./: .gitignore  2406.11838v3.md  README.md  journal.pcbi.1012136.md  pyproject.toml
configs/: ddpm_5kb.yaml  ddpm_5kb_debug.yaml  ddpm_H_5kb.yaml  ddpm_L_5kb.yaml  ddpm_base_5kb.yaml  mar_5kb.yaml  mar_5kb_debug.yaml  mar_H_5kb.yaml  mar_L_5kb.yaml  mar_base_5kb.yaml
scripts/: train_ddpm.slurm  train_mar.slurm
src/hic2microc_mar/: __init__.py  evaluate_hic2microc.py  infer_ddpm.py  infer_mar.py  train_ddpm.py  train_mar.py
src/hic2microc_mar/data/: dataset.py  prepare_cool.py  utils.py
src/hic2microc_mar/diffusion/: ddpm_wavegrad.py  diffusion_loss.py
src/hic2microc_mar/models/: ddpm_unet.py  hictokenizer.py  mar_transformer.py
